# music-commander

./: .gitignore  .pre-commit-config.yaml  3  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  REVIEW.md  config.example.toml  flake.nix  music-cmd  pyproject.toml
.claude/commands/: spec-kitty.accept.md  spec-kitty.analyze.md  spec-kitty.checklist.md  spec-kitty.clarify.md  spec-kitty.constitution.md  spec-kitty.dashboard.md  spec-kitty.merge.md  spec-kitty.plan.md  spec-kitty.specify.md  spec-kitty.status.md  spec-kitty.tasks.md
.kittify/: .dashboard  AGENTS.md  metadata.yaml
.kittify/memory/: constitution.md
.kittify/scripts/: debug-dashboard-scan.py  validate_encoding.py
.kittify/workspaces/: 004-real-git-annex-integration-tests-WP02.json  004-real-git-annex-integration-tests-WP03.json  004-real-git-annex-integration-tests-WP04.json  004-real-git-annex-integration-tests-WP05.json  005-files-check-integrity-WP03.json  005-files-check-integrity-WP04.json  005-files-check-integrity-WP05.json  006-file-export-recode-WP02.json  006-file-export-recode-WP03.json  006-file-export-recode-WP04.json  006-file-export-recode-WP05.json  007-bandcamp-collection-manager-WP02.json  007-bandcamp-collection-manager-WP03.json  007-bandcamp-collection-manager-WP04.json  007-bandcamp-collection-manager-WP05.json  007-bandcamp-collection-manager-WP06.json  007-bandcamp-collection-manager-WP07.json  007-bandcamp-collection-manager-WP08.json  007-bandcamp-collection-manager-WP09.json  008-cue-sheet-splitter-WP02.json  008-cue-sheet-splitter-WP03.json  008-cue-sheet-splitter-WP04.json  009-anomalistic-portal-mirror-WP02.json  009-anomalistic-portal-mirror-WP03.json  009-anomalistic-portal-mirror-WP04.json  009-anomalistic-portal-mirror-WP05.json  009-anomalistic-portal-mirror-WP06.json  009-anomalistic-portal-mirror-WP07.json
.opencode/command/: spec-kitty.checklist.md  spec-kitty.clarify.md  spec-kitty.dashboard.md  spec-kitty.plan.md  spec-kitty.specify.md  spec-kitty.tasks.md
docs/: bandcamp.md  commands.md  configuration.md  contributing.md  howto-annex.md  index.md  installation.md  release-process.md  search-dsl.md  troubleshooting.md
kitty-specs/001-core-framework-with/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  tasks.md
kitty-specs/002-mixxx-to-git/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  tasks.md
kitty-specs/003-annex-metadata-search-views/: data-model.md  meta.json  plan.md  research.md  spec.md  tasks.md
kitty-specs/004-real-git-annex-integration-tests/: meta.json  plan.md  research.md  spec.md  tasks.md
kitty-specs/005-files-check-integrity/: data-model.md  meta.json  plan.md  research.md  spec.md  tasks.md
kitty-specs/006-file-export-recode/: data-model.md  meta.json  plan.md  research.md  spec.md  tasks.md
kitty-specs/007-bandcamp-collection-manager/: data-model.md  meta.json  plan.md  research.md  spec.md  tasks.md
kitty-specs/008-cue-sheet-splitter/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  tasks.md
kitty-specs/009-anomalistic-portal-mirror/: data-model.md  meta.json  plan.md  research.md  spec.md  tasks.md
music_commander/: __init__.py  __main__.py  cli.py  config.example.toml  config.py  exceptions.py
music_commander/anomalistic/: __init__.py  (+6 more)
tests/: conftest.py
(+523 files in other folders)
