[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "music-commander"
version = "0.1.0"
description = "Manage git-annex based music collections with Mixxx integration"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "poelzi"}
]
dependencies = [
    "beautifulsoup4>=4.12",
    "click>=8.0",
    "jinja2>=3.0",
    "lark>=1.0",
    "python-magic>=0.4",
    "requests>=2.28",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "mutagen>=1.45",
]

[project.scripts]
music-commander = "music_commander.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["music_commander*"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
