[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "music-commander"
version = "0.1.0"
description = "Manage git-annex based music collections with Mixxx integration"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Daniel Poelzleithner", email = "poelzi@poelzi.org"}
]
keywords = ["music", "git-annex", "mixxx", "dj", "bandcamp", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "click>=8.0",
    "jinja2>=3.0",
    "lark>=1.0",
    "python-magic>=0.4",
    "rapidfuzz>=3.0",
    "requests>=2.28",
    "rich>=13.0",
    "rookiepy>=0.3",
    "sqlalchemy>=2.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "mutagen>=1.45",
]

[project.urls]
Homepage = "https://github.com/poelzi/music-commander"
Repository = "https://github.com/poelzi/music-commander"
Issues = "https://github.com/poelzi/music-commander/issues"

[project.scripts]
music-commander = "music_commander.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["music_commander*"]

[tool.setuptools.package-data]
music_commander = ["config.example.toml", "search/grammar.lark"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "aiohttp",
    "bs4",
    "chardet",
    "fabric",
    "lark",
    "lark.*",
    "mutagen",
    "mutagen.*",
    "platformdirs",
    "rapidfuzz",
    "rapidfuzz.*",
    "requests",
    "requests.*",
    "rich",
    "rich.*",
    "rookiepy",
    "sqlalchemy",
    "sqlalchemy.*",
    "toml",
    "xxhash",
]
ignore_missing_imports = true
